# coordinated_sabotage

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bcb/: Untitled.ipynb  prototype.py  samples_files.json  utils.py
bcb/sample_42/: dataframe_creation.py  pca_transformation.py  task.py  variance_plotting.py
bcb/sample_42_base/: task.py  tests.py
bcb/sample_95_base/: task.py  tests.py
logs/: 2025-09-14T19-24-06+01-00_multi-agent-file-modification_JEksX6ib2JvdVuddcJpQzu.eval  2025-09-15T20-54-16+01-00_multi-agent-file-modification_Eai8z6HSU92CPaArXrGeMp.eval  2025-09-17T11-21-11+01-00_multi-agent-file-modification_dKuZXUbEMipT7yGniVuTEb.eval
multi_agent_eval/: Dockerfile  agents.py  bcb_sample_42.py  code_validator.py  compose.yaml  constants.py  custom_react_agent.py  env_setup.py  run.py  scorer.py  swe_bench_v_prototype.py  swe_bench_verified.py  swe_bench_verified_single_agent.py  task_repo_utils.py  tasks.py  test_eval.py  tools.py  unique_digits.py  webserver.py
multi_agent_eval/environment/: agents.py  constants.py  scorer.py  tools.py
multi_agent_eval/samples/: __init__.py  _registry.py  append_log_db.py  secretive_xor.py  unique_digits.py  utils.py  webserver.py  young_tableaux.py
multi_agent_eval/swe_bench/: build_images.py  multi_agent_task.py  multi_file_problems.csv  scorers.py  setup_permissions.py  swe_bench_tasks.py
multi_agent_eval/swe_bench/tests/: create_test_repos.py  swe_bench_tests.py
multi_agent_eval/workspace/: config.py  core.py  data_processor.py  main.py  test_main.py  utils.py  validation.py
tasks/appendlog_db/: README.md  cli.py
tasks/appendlog_db/appendlog_db/: __init__.py  compaction.py  database.py  hash_index.py
tasks/appendlog_db/tests/: test_database.py
tasks/webserver/: demo.py  run_tests.py
tasks/webserver/src/webserver/: __init__.py  middleware.py  request.py  response.py  router.py  server.py
tasks/webserver/tests/: test_middleware.py  test_request.py  test_response.py  test_server.py
tasks/young_tableaux/: README.md  cli.py  count.py  tableaux.py
tasks/young_tableaux/tests/: test_count.py  test_tableaux.py
tests/: test_code_validator.py
webserver/: .coverage  README.md  demo.py  example_app.py  pyproject.toml  requirements-test.txt  run_tests.py
webserver/src/webserver/: __init__.py  middleware.py  response.py  router.py  server.py
webserver/tests/: __init__.py  test_integration.py  test_middleware.py  test_request.py  test_response.py  test_router.py  test_server.py
