[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webserver"]

[project]
name = "simple-webserver"
version = "0.1.0"
description = "A simple HTTP web server implementation in Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "WebServer Team", email = "team@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/example/simple-webserver"
Repository = "https://github.com/example/simple-webserver"
Issues = "https://github.com/example/simple-webserver/issues"

[project.scripts]
webserver-demo = "webserver.demo:main"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "requests>=2.32.4",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
